working on tooltips!

--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -89,14 +89,14 @@
   "idf.icon.1x6": "\u0026",
   "idf.icon.force": "\u0027",
   "idf.icon.attack_speed": "\u0028",
-  "icon.attribute.name.generic.attack_speed": "\u0028",
+  "idf.icon.attribute.name.generic.attack_speed": "\u0028",
   "idf.icon.damage_class": "\u0029",
   "idf.icon.lifesteal": "\u002A",
   "idf.icon.armour_penetration": "\u002B",
   "idf.icon.crit_chance": "\u002C",
   "idf.icon.critical_chance": "\u002C",
   "idf.icon.knockback": "\u002D",
-  "icon.attribute.name.generic.attack_knockback": "\u002D",
+  "idf.icon.attribute.name.generic.attack_knockback": "\u002D",
   "idf.icon.1x14": "\u002E",
   "idf.icon.1x15": "\u002F",
   "idf.icon.resistance": "\u0030",
@@ -106,20 +106,23 @@
   "idf.icon.2x4": "\u0034",
   "idf.icon.2x5": "\u0035",
   "idf.icon.defense": "\u0036",
-  "icon.attribute.name.generic.armor_toughness": "\u0036",
+  "idf.icon.attribute.name.generic.armor_toughness": "\u0036",
   "idf.icon.evasion": "\u0037",
   "idf.icon.health": "\u0038",
-  "icon.attribute.name.generic.max_health": "\u0038",
+  "idf.icon.attribute.name.generic.max_health": "\u0038",
   "idf.icon.movespeed": "\u0039",
-  "icon.attribute.name.generic.movement_speed": "\u0039",
+  "idf.icon.attribute.name.generic.movement_speed": "\u0039",
   "idf.icon.knockback_resistance": "\u0041",
-  "icon.attribute.name.generic.knockback_resistance": "\u0041",
+  "idf.icon.attribute.name.generic.knockback_resistance": "\u0041",
   "idf.icon.luck": "\u0042",
-  "icon.attribute.name.generic.luck": "\u0042",
+  "idf.icon.attribute.name.generic.luck": "\u0042",
   "idf.icon.crush": "\u0043",
   "idf.icon.strike": "\u0044",
+  "idf.icon.strike_mult": "\u0044",
   "idf.icon.pierce": "\u0045",
+  "idf.icon.pierce_mult": "\u0045",
   "idf.icon.slash": "\u0046",
+  "idf.icon.slash_mult": "\u0046",
   "idf.icon.generic": "\u0047",
   "idf.icon.durability": "\u0048",
   "idf.icon.3x10": "\u0049",
@@ -141,26 +144,26 @@
   "idf.icon.4x10": "\u0059",
   "idf.icon.4x11": "\u005A",
   "idf.icon.fire": "\u0061",
-  "icon.fire_damage": "\u0061",
-  "icon.fire_resistance": "\u0061",
+  "idf.icon.fire_damage": "\u0061",
+  "idf.icon.fire_resistance": "\u0061",
   "idf.icon.water": "\u0062",
-  "icon.water_damage": "\u0062",
-  "icon.water_resistance": "\u0062",
+  "idf.icon.water_damage": "\u0062",
+  "idf.icon.water_resistance": "\u0062",
   "idf.icon.lightning": "\u0063",
-  "icon.lightning_damage": "\u0063",
-  "icon.lightning_resistance": "\u0063",
+  "idf.icon.lightning_damage": "\u0063",
+  "idf.icon.lightning_resistance": "\u0063",
   "idf.icon.magic": "\u0064",
-  "icon.magic_damage": "\u0064",
-  "icon.magic_resistance": "\u0064",
+  "idf.icon.magic_damage": "\u0064",
+  "idf.icon.magic_resistance": "\u0064",
   "idf.icon.dark": "\u0065",
-  "icon.dark_damage": "\u0065",
-  "icon.dark_resistance": "\u0065",
+  "idf.icon.dark_damage": "\u0065",
+  "idf.icon.dark_resistance": "\u0065",
   "idf.icon.holy": "\u0066",
-  "icon.holy_damage": "\u0066",
-  "icon.holy_resistance": "\u0066",
+  "idf.icon.holy_damage": "\u0066",
+  "idf.icon.holy_resistance": "\u0066",
   "idf.icon.physical": "\u0067",
-  "icon.attribute.name.generic.attack_damage": "\u0067",
-  "icon.attribute.name.generic.armor": "\u0067",
+  "idf.icon.attribute.name.generic.attack_damage": "\u0067",
+  "idf.icon.attribute.name.generic.armor": "\u0067",
   "idf.icon.5x9": "\u0068",
   "idf.icon.5x10": "\u0069",
   "idf.icon.5x11": "\u006A",
