still working on tooltips with fonts. Updating damage indicators with new font aswell, need to fix dropshadow so text is readable and test bigger numbers.

--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -202,6 +202,16 @@
   "idf.damage_class.tooltip.crush": "Crush",
   "idf.damage_class.tooltip.slash": "Slash",
   "idf.damage_class.tooltip.generic": "Generic",
+  "idf.superscript.0": "⁰",
+  "idf.superscript.1": "¹",
+  "idf.superscript.2": "²",
+  "idf.superscript.3": "³",
+  "idf.superscript.4": "⁴",
+  "idf.superscript.5": "⁵",
+  "idf.superscript.6": "⁶",
+  "idf.superscript.7": "⁷",
+  "idf.superscript.8": "⁸",
+  "idf.superscript.9": "⁹",
 
   "//COMMANDS/MESSAGES": "USED VARIOUS PLACES",
   "idf.client.armour.map.updated": "Your armour values have been updated by the server.",
