something with legendarytooltips is fucking with the title

--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -173,6 +173,7 @@
   "idf.black_diamond": "❖ ",
   "idf.fleur_de_lis.symbol": "⚜",
   "idf.right_arrow.symbol": "➢",
+  "idf.right_arrow_2.symbol": "►",
   "idf.sword.symbol": "⚔ ",
   "idf.base_multiplication": "(B⁎",
   "idf.total_multiplication": "(T⁎",
