added accuracy attribute

--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -5,11 +5,11 @@
   "lightning_damage": "Lightning Damage",
   "magic_damage": "Magic Damage",
   "dark_damage": "Dark Damage",
-  "fire_resistance": "Fire Resistance",
-  "water_resistance": "Water Resistance",
-  "lightning_resistance": "Lightning Resistance",
-  "magic_resistance": "Magic Resistance",
-  "dark_resistance": "Dark Resistance",
+  "fire_defence": "Fire Defence",
+  "water_defence": "Water Defence",
+  "lightning_defence": "Lightning Defence",
+  "magic_defence": "Magic Defence",
+  "dark_defence": "Dark Defence",
   "evasion": "Evasion",
   "lifesteal": "Lifesteal",
   "armour_penetration": "Armour Penetration",
@@ -18,25 +18,6 @@
   "strike_mult": "Strike Multiplier",
   "pierce_mult": "Pierce Multiplier",
   "slash_mult": "Slash Multiplier",
-  "crush_mult": "Crush Multiplier",
-  "generic_mult": "Generic Multiplier",
-
-  "//ATTRIBUTES_2": "NEEDED FOR TOOLTIPS",
-  "idf.fire_damage": "Fire Damage",
-  "idf.water_damage": "Water Damage",
-  "idf.lightning_damage": "Lightning Damage",
-  "idf.magic_damage": "Magic Damage",
-  "idf.dark_damage": "Dark Damage",
-  "idf.fire_resistance": "Fire Resistance",
-  "idf.water_resistance": "Water Resistance",
-  "idf.lightning_resistance": "Lightning Resistance",
-  "idf.magic_resistance": "Magic Resistance",
-  "idf.dark_resistance": "Dark Resistance",
-  "idf.evasion": "Evasion",
-  "idf.lifesteal": "Lifesteal",
-  "idf.force": "Force",
-  "idf.penetrating": "Armour Penetration",
-  "idf.crit_chance": "Critical Chance",
 
   "//STAT SCREEN": "STAT SCREEN",
   "idf.stats_screen": "Stats Screen",
@@ -53,14 +34,14 @@
   "idf.stat_screen_force": "Force",
   "idf.stat_screen_knockback": "KB.",
   "idf.stat_screen_attack_speed": "A.Spd",
-  "idf.stat_screen_physical_resistance": "P.Res",
-  "idf.stat_screen_fire_resistance": "F.Res",
-  "idf.stat_screen_water_resistance": "W.Res",
-  "idf.stat_screen_lightning_resistance": "L.Res",
-  "idf.stat_screen_magic_resistance": "M.Res",
-  "idf.stat_screen_dark_resistance": "D.Res",
-  "idf.stat_screen_holy_resistance": "H.Res",
-  "idf.stat_screen_defense": "Def.",
+  "idf.stat_screen_physical_resistance": "P.Def",
+  "idf.stat_screen_fire_resistance": "F.Def",
+  "idf.stat_screen_water_resistance": "W.Def",
+  "idf.stat_screen_lightning_resistance": "L.Def",
+  "idf.stat_screen_magic_resistance": "M.Def",
+  "idf.stat_screen_dark_resistance": "D.Def",
+  "idf.stat_screen_holy_resistance": "H.Def",
+  "idf.stat_screen_defense": "Wgt.",
   "idf.stat_screen_evasion": "Eva.",
   "idf.stat_screen_knockback_resistance": "KBR.",
   "idf.stat_screen_strike": "Strk.",
@@ -121,6 +102,7 @@
   "idf.icon.strike_mult": "\u0044",
   "idf.icon.pierce": "\u0045",
   "idf.icon.pierce_mult": "\u0045",
+  "idf.icon.accuracy": "\u0045",
   "idf.icon.slash": "\u0046",
   "idf.icon.slash_mult": "\u0046",
   "idf.icon.attribute.name.generic.attack_damage": "\u0047",
