ready for initial release

--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -143,8 +143,8 @@
   "idf.icon.5x16": "\u006F",
   "idf.icon.6x1": "\u0070",
   "idf.icon.6x2": "\u0071",
-  "idf.icon.6x3": "\u0072",
-  "idf.icon.6x4": "\u0073",
+  "idf.icon.tetra.attribute.draw_strength.name": "\u0072",
+  "idf.icon.tetra.attribute.draw_speed.name": "\u0073",
   "idf.icon.6x5": "\u0074",
   "idf.icon.6x6": "\u0075",
   "idf.icon.6x7": "\u0076",
@@ -167,11 +167,9 @@
   "//TOOLTIPS": "",
   "idf.damage.tooltip": "Damage",
   "idf.resistance.tooltip": "Resistance",
-  "idf.damage_class.tooltip.strike": "Strike",
-  "idf.damage_class.tooltip.pierce": "Pierce",
-  "idf.damage_class.tooltip.crush": "Crush",
-  "idf.damage_class.tooltip.slash": "Slash",
-  "idf.damage_class.tooltip.generic": "Generic",
+  "idf.strike_tooltip": " (Strike)",
+  "idf.pierce_tooltip": " (Pierce)",
+  "idf.slash_tooltip": " (Slash)",
   "idf.superscript.0": "⁰",
   "idf.superscript.1": "¹",
   "idf.superscript.2": "²",
@@ -218,11 +216,18 @@
   "idf.stats.magic_damage.tooltip": "+§e%s §rmagic damage",
   "idf.stats.dark_damage": "Dark Damage",
   "idf.stats.dark_damage.tooltip": "+§e%s §rdark damage",
+  "idf.stats.holy_damage": "Dark Damage",
+  "idf.stats.holy_damage.tooltip": "+§e%s §rholy damage",
+  "idf.stats.accuracy": "Accuracy",
+  "idf.stats.accuracy.tooltip": "+§e%s §rAccuracy",
   "idf.stats.pen": "Armour Penetration",
   "idf.stats.pen.tooltip": "+§e%s §rArmour Penetration",
+  "idf.stats.force": "Force",
+  "idf.stats.force.tooltip": "+§e%s §rForce",
   "idf.stats.lifesteal": "Lifesteal",
   "idf.stats.lifesteal.tooltip": "+§e%s §rLifesteal",
   "idf.stats.crit_chance": "Critical Strike Chance",
-  "idf.stats.crit_chance.tooltip": "+§e%s §rCritical Strike Chance"
+  "idf.stats.crit_chance.tooltip": "+§e%s §rCritical Strike Chance",
+  "idf.newline": "\n"
 }
 
