ready for initial release

--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -219,15 +219,13 @@
   "idf.stats.holy_damage": "Dark Damage",
   "idf.stats.holy_damage.tooltip": "+§e%s §rholy damage",
   "idf.stats.accuracy": "Accuracy",
-  "idf.stats.accuracy.tooltip": "+§e%s §rAccuracy",
+  "idf.stats.accuracy.tooltip": "+§e%s §rAccuracy. Modifier for possible spread when shooting projectiles. Default for a bow is 10.",
   "idf.stats.pen": "Armour Penetration",
-  "idf.stats.pen.tooltip": "+§e%s §rArmour Penetration",
+  "idf.stats.pen.tooltip": "+§e%s §rArmour Penetration. Reduces physical defence by a percentage when attacking.",
   "idf.stats.force": "Force",
-  "idf.stats.force.tooltip": "+§e%s §rForce",
+  "idf.stats.force.tooltip": "+§e%s §rForce. Compares attacker's force to defender's weight to apply a damage multiplier.",
   "idf.stats.lifesteal": "Lifesteal",
-  "idf.stats.lifesteal.tooltip": "+§e%s §rLifesteal",
-  "idf.stats.crit_chance": "Critical Strike Chance",
-  "idf.stats.crit_chance.tooltip": "+§e%s §rCritical Strike Chance",
+  "idf.stats.lifesteal.tooltip": "+§e%s §rLifesteal. Heals user for a percentage of total damage dealt when attacking with a full-strength attack.",
   "idf.newline": "\n",
   "tetra.stats.criticalStrike.tooltip": "Has a chance to critically hit when hitting entities or breaking blocks.\n§e+%s§7 critical strike chance, §e+%s §7critical strike damage\n§e%s§7 chance to instantly break blocks"
 }
