finished info screen.

--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -189,6 +189,7 @@
   "idf.update.command.success": "Server has been updated, and relevant clients have been notified.",
   "idf.update.command.failure": "Update request denied. You are not on a dedicated server!",
   "key.idf.open_stats": "Open Stats",
+  "key.idf.open_bestiary": "Open Bestiary",
   "idf.press_to_inspect": "Press §eI§r to inspect this item!",
   "key.idf.inspect_item": "Inspect Item",
   "key.category.idf": "ImprovedDamageFramework",
@@ -228,8 +229,41 @@
   "idf.stats.force.tooltip": "+§e%s §rForce. Compares attacker's force to defender's weight to apply a damage multiplier.",
   "idf.stats.lifesteal": "Lifesteal",
   "idf.stats.lifesteal.tooltip": "+§e%s §rLifesteal. Heals user for a percentage of total damage dealt when attacking with a full-strength attack.",
+
+  "//BESTIARY": "",
   "idf.newline": "\n",
   "tetra.stats.criticalStrike.tooltip": "Has a chance to critically hit when hitting entities or breaking blocks.\n§e+%s§7 critical strike chance, §e+%s §7critical strike damage\n§e%s§7 chance to instantly break blocks",
-  "idf.info_screen": "Info Screen"
+  "idf.info_screen": "Info Screen",
+  "idf.bestiary_screen": "Bestiary",
+  "idf.bestiary_entry_screen": "Bestiary Entry Screen",
+  "idf.bestiary_info.health": "Health:",
+  "idf.bestiary_info.weight": "Weight:",
+  "idf.bestiary_info.speed": "Speed:",
+  "idf.bestiary_info.attribute.name.generic.armor": "P.Def:",
+  "idf.bestiary_info.fire_defence": "F.Def:",
+  "idf.bestiary_info.water_defence": "W.Def:",
+  "idf.bestiary_info.lightning_defence": "L.Def:",
+  "idf.bestiary_info.magic_defence": "M.Def:",
+  "idf.bestiary_info.dark_defence": "D.Def:",
+  "idf.bestiary_info.holy_defence": "H.Def:",
+  "idf.bestiary_info.strike_mult": "Strike:",
+  "idf.bestiary_info.slash_mult": "Slash:",
+  "idf.bestiary_info.pierce_mult": "Pierce:",
+  "idf.bestiary_info.force": "Force:",
+  "idf.bestiary_info.attribute.name.generic.attack_knockback": "Knockback:",
+  "idf.bestiary_info.attribute.name.generic.knockback_resistance": "Kn.Resistance:",
+  "idf.bestiary_info.attribute.name.generic.attack_damage": "P.Dmg:",
+  "idf.bestiary_info.fire_damage": "F.Dmg:",
+  "idf.bestiary_info.water_damage": "W.Dmg:",
+  "idf.bestiary_info.lightning_damage": "L.Dmg:",
+  "idf.bestiary_info.magic_damage": "M.Dmg:",
+  "idf.bestiary_info.dark_damage": "D.Dmg:",
+  "idf.bestiary_info.holy_damage": "H.Dmg:",
+  "idf.bestiary_info.penetrating": "A.Pen:",
+  "idf.bestiary_info.crit_chance": "C.Chance:",
+  "idf.bestiary_info.crit_damage": "C.Dmg:",
+  "idf.bestiary_info.lifesteal": "Lifesteal:",
+  "idf.bestiary_info.accuracy": "Accuracy:",
+  "idf.bestiary_info.evasion": "Evasion:"
 }
 
