made new tooltip style

--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -67,13 +67,20 @@
 
   "//ICON DEFINITIONS_ICONS": "for 'icons' font",
   "idf.icon.damage": "\u0021",
+  "idf.divider1": "\u0021",
   "idf.icon.attribute.name.generic.attack_damage": "\u0021",
   "idf.icon.water_damage": "\u0022",
+  "idf.divider2": "\u0022",
   "idf.icon.lightning_damage": "\u0023",
+  "idf.divider3": "\u0023",
   "idf.icon.magic_damage": "\u0024",
+  "idf.divider4": "\u0024",
   "idf.icon.dark_damage": "\u0025",
+  "idf.divider5": "\u0025",
   "idf.icon.holy_damage": "\u0026",
+  "idf.divider6": "\u0026",
   "idf.icon.force": "\u0027",
+  "idf.divider7": "\u0027",
   "idf.icon.attack_speed": "\u0028",
   "idf.icon.attribute.name.generic.attack_speed": "\u0028",
   "idf.icon.1x9": "\u0029",
@@ -156,6 +163,7 @@
   "idf.icon.6x11": "\u007A",
 
   "idf.black_diamond": "❖ ",
+  "idf.divider": "▬",
   "idf.fleur_de_lis.symbol": "⚜",
   "idf.right_arrow_2.symbol": "➢",
   "idf.right_arrow.symbol": "►",
@@ -165,23 +173,6 @@
   "idf.ohm.symbol": "Ω",
   "idf.halfmoon.symbol":"◐",
   "idf.icon.infinity.symbol": ": ∞",
-
-  "//TOOLTIPS": "",
-  "idf.damage.tooltip": "Damage",
-  "idf.resistance.tooltip": "Resistance",
-  "idf.strike_tooltip": " (Strike)",
-  "idf.pierce_tooltip": " (Pierce)",
-  "idf.slash_tooltip": " (Slash)",
-  "idf.superscript.0": "⁰",
-  "idf.superscript.1": "¹",
-  "idf.superscript.2": "²",
-  "idf.superscript.3": "³",
-  "idf.superscript.4": "⁴",
-  "idf.superscript.5": "⁵",
-  "idf.superscript.6": "⁶",
-  "idf.superscript.7": "⁷",
-  "idf.superscript.8": "⁸",
-  "idf.superscript.9": "⁹",
 
   "//COMMANDS/MESSAGES": "USED VARIOUS PLACES",
   "idf.client.armour.map.updated": "Your armour values have been updated by the server.",
@@ -264,6 +255,32 @@
   "idf.bestiary_info.crit_damage": "C.Dmg:",
   "idf.bestiary_info.lifesteal": "Lifesteal:",
   "idf.bestiary_info.accuracy": "Accuracy:",
-  "idf.bestiary_info.evasion": "Evasion:"
+  "idf.bestiary_info.evasion": "Evasion:",
+
+  "//TOOLTIPS": "",
+  "idf.damage.tooltip": "Damage",
+  "idf.tooltip.accuracy": "Accuracy:",
+  "idf.tooltip.durability": "Durability: ",
+  "idf.tooltip.attack_speed": "Atk. Speed: ",
+  "idf.tooltip.attribute.name.generic.attack_damage": "Physical Damage: ",
+  "idf.tooltip.fire_damage": "Fire Damage: ",
+  "idf.tooltip.water_damage": "Water Damage: ",
+  "idf.tooltip.lightning_damage": "Lightning Damage: ",
+  "idf.tooltip.magic_damage": "Magic Damage: ",
+  "idf.tooltip.dark_damage": "Dark Damage: ",
+  "idf.tooltip.holy_damage": "Holy Damage: ",
+  "idf.tooltip.attribute.name.generic.armor": "Physical Defence: ",
+  "idf.tooltip.fire_defence": "Fire Defence: ",
+  "idf.tooltip.water_defence": "Water Defence: ",
+  "idf.tooltip.lightning_defence": "Lightning Defence: ",
+  "idf.tooltip.magic_defence": "Magic Defence: ",
+  "idf.tooltip.dark_defence": "Dark Defence: ",
+  "idf.tooltip.holy_defence": "Holy Defence: ",
+  "idf.resistance.tooltip": "Resistance",
+  "idf.strike_tooltip": " (Strike)",
+  "idf.pierce_tooltip": " (Pierce)",
+  "idf.slash_tooltip": " (Slash)",
+  "idf.tooltip.force": "Force: ",
+  "idf.tooltip.weight": "Weight: "
 }
 
