fixed bug where infinity symbol wouldn't show for items with no durability.

--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -172,7 +172,7 @@
   "idf.total_multiplication": "(T⁎",
   "idf.ohm.symbol": "Ω",
   "idf.halfmoon.symbol":"◐",
-  "idf.icon.infinity.symbol": ": ∞",
+  "idf.icon.infinity.symbol": "∞",
 
   "//COMMANDS/MESSAGES": "USED VARIOUS PLACES",
   "idf.client.armour.map.updated": "Your armour values have been updated by the server.",
