fixed legendarytooltips compat. Fixed mult tooltips

--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -5,11 +5,13 @@
   "lightning_damage": "Lightning Damage",
   "magic_damage": "Magic Damage",
   "dark_damage": "Dark Damage",
+  "holy_damage": "Holy Damage",
   "fire_defence": "Fire Defence",
   "water_defence": "Water Defence",
   "lightning_defence": "Lightning Defence",
   "magic_defence": "Magic Defence",
   "dark_defence": "Dark Defence",
+  "holy_defence": "Holy Defence",
   "evasion": "Evasion",
   "lifesteal": "Lifesteal",
   "armour_penetration": "Armour Penetration",
