-> Moved tooltip stuff to Util.java -> Fixed bug with better combat -> Added mixin to remove Apotheosis tooltips when IDF is loaded -> Added new event that gets called during IDF's tooltip method -> Added attack range icon -> Added support for Better Combat attack range attribute -> Removed Legacy tooltips

--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -134,7 +134,7 @@
   "idf.icon.wisdom": "\u0055",
   "idf.icon.faith": "\u0056",
   "idf.icon.4x8": "\u0057",
-  "idf.icon.4x9": "\u0058",
+  "idf.icon.attack_range": "\u0058",
   "idf.icon.fire_defence": "\u0059",
   "idf.icon.4x11": "\u005A",
   "idf.icon.fire": "\u0061",
