-> Made attack range tooltips only show attack range for better combat or forge attribute depending on in better combat is loaded.

--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -264,6 +264,7 @@
   "idf.tooltip.accuracy": "Accuracy: ",
   "idf.tooltip.durability": "Durability: ",
   "idf.tooltip.attack_speed": "Atk. Speed: ",
+  "idf.tooltip.attack_range": "Atk. Range: ",
   "idf.tooltip.attribute.name.generic.attack_damage": "Physical Damage: ",
   "idf.tooltip.fire_damage": "Fire Damage: ",
   "idf.tooltip.water_damage": "Water Damage: ",
