-> fixed iron's spellbooks compat -> fixed bug with indirect player attack iframes -> added hold shift to display attribute modifiers for other item slots if they exist -> added in-built datapack for apotheosis affixes (still needs testing)

--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -293,6 +293,13 @@
   "idf.irons_spellbook.holy_damage_tooltip": "%s Holy Damage",
   "idf.irons_spellbook.physical_damage_tooltip": "%s Physical Damage",
   "idf.AOE.text": "(AOE)",
-  "idf.not_applicable": "N/A"
+  "idf.not_applicable": "N/A",
+  "idf.hold_shift_for_tooltips": "(Hold Shift for Other Slot Modifiers)",
+  "idf.itemslot.mainhand": "When in Main Hand",
+  "idf.itemslot.offhand": "When in Offhand",
+  "idf.itemslot.feet": "When on Feet",
+  "idf.itemslot.legs": "When on Legs",
+  "idf.itemslot.chest": "When on Chest",
+  "idf.itemslot.head": "When on Head"
 }
 
