--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -300,6 +300,15 @@
   "idf.itemslot.feet": "When on Feet",
   "idf.itemslot.legs": "When on Legs",
   "idf.itemslot.chest": "When on Chest",
-  "idf.itemslot.head": "When on Head"
+  "idf.itemslot.head": "When on Head",
+
+  "attribute.name.generic.attack_damage": "Physical Damage",
+  "attribute.name.generic.armor": "Physical Defence",
+  "attribute.name.generic.armor_toughness": "Weight",
+  "effect.minecraft.fire_resistance": "Flame Immunity",
+  "item.minecraft.tipped_arrow.effect.fire_resistance": "Arrow of Flame Immunity",
+  "item.minecraft.potion.effect.fire_resistance": "Potion of Flame Immunity",
+  "item.minecraft.splash_potion.effect.fire_resistance": "Splash Potion of Flame Immunity",
+  "item.minecraft.lingering_potion.effect.fire_resistance": "Lingering Potion of Flame Immunity"
 }
 
